# veles.znicz

./: .gitattributes  .gitignore  .gitmodules  .project  .pydevproject  .pylintrc  README.md  __init__.py  accumulator.py  activation.py  all2all.py  channel_splitting.py  config.py  conv.py  ctask.py  cudnn.py  cutter.py  data_batch.py  decision.py  deconv.py  depooling.py  diff_stats.py  diversity.py  downloader.py  dropout.py  error.py  evaluator.py  feed_tanh.cl  filters.py  formats.py  gd.py  gd_conv.py  gd_deconv.py  gd_pooling.py  hands.py  image_saver.py  input_joiner.py  kanji.py  kohonen.py  labels_printer.py  (+38 more)
Tests/: TestPickle.py  TestWine.py
c/: evaluator.c
cl/: conv.cl  defines.cl  ev.cl  evaluator.cl  feed.cl  feed_exp.cl  feed_linear.cl  feed_tanh.cl  forward.cl  gd.cl  gd_tanh.cl  gda.cl  gradient_descent.cl  gradient_descent_alpha.cl  gradient_descent_conv.cl  gradient_descent_pooling.cl  gradient_descent_tanh.cl  matrix_multiplication.cl  matrix_reduce.cl  mx.cl  pooling.cl  rbm.cl  sm.cl  softmax.cl
cuda/: activation.cu  bias_update.store_output.cu  cutter.cu  denormalization.jcu  depooling.cu  dropout.cu  evaluator.cu  evaluator.jcu  evaluator_mse.jcu  fullbatch_loader.cu  gradient_descent.store_output.cu  gradient_descent_common.cu  gradient_descent_pooling.cu  gradient_descent_relu.cu  gradient_descent_sigmoid.cu  gradient_descent_strict_relu.cu  gradient_descent_tanh.cu  join.cu  mse_find_closest.cu  mse_find_closest.jcu  multiplier.cu  normalization.cu  pack.cu  pooling.cu  pooling_common.cu  pooling_common.cuh  random.cu  summator.cu  unpack.cu  weights_ortho.cu  weights_update.store_output.cu  weights_zerofilling.cu
cuda/all2all/: forward.cu  softmax.cu
cuda/conv/: forward.cu  unpack.cu
cuda/deconv/: forward.cu
docs/: for_docs.cc  manualrst_veles_znicz_clone.rst  manualrst_veles_znicz_intro.rst  manualrst_veles_znicz_units.rst  veles.znicz.activation.rst  veles.znicz.cutter.rst  veles.znicz.deconv.rst  veles.znicz.depooling.rst  veles.znicz.diff_stats.rst  veles.znicz.diversity.rst  veles.znicz.dropout.rst  veles.znicz.gd_deconv.rst  veles.znicz.kohonen.rst  veles.znicz.labels_printer.rst  veles.znicz.loader.caffe.protobuf2.rst  veles.znicz.loader.caffe.rst  veles.znicz.loader.imagenet_loader.rst  veles.znicz.loader.loader_lmdb.rst  veles.znicz.loader.loader_mnist.rst  veles.znicz.loader.loader_stl.rst  veles.znicz.loader.loader_wine.rst  veles.znicz.loader.rst  veles.znicz.lr_adjust.rst  veles.znicz.lstm.rst  veles.znicz.multiplier.rst  veles.znicz.nn_plotting_units.rst  veles.znicz.nn_rollback.rst  veles.znicz.normalization.rst  veles.znicz.rbm_units.rst  veles.znicz.resizable_all2all.rst  veles.znicz.rprop_gd.rst  veles.znicz.rst  veles.znicz.samples.CIFAR10.cifar.rst  veles.znicz.samples.CIFAR10.cifar_caffe_config.rst  veles.znicz.samples.CIFAR10.cifar_config.rst  veles.znicz.samples.CIFAR10.rst  veles.znicz.samples.DemoKohonen.kohonen.rst  veles.znicz.samples.DemoKohonen.kohonen_config.rst  veles.znicz.samples.DemoKohonen.rst  veles.znicz.samples.Kanji.generate_kanji.rst  (+29 more)
libZnicz/: .autotools  .cproject  .project  Makefile.am  Znicz.pc.in  autogen.sh  common.ac  configure.ac  cpplint.py  fullcheck_xml.sh
libZnicz/android/: Android.mk.in
libZnicz/inc/: Makefile.am  workflow-inl.h  workflow.h
libZnicz/inc/znicz/: units.h
libZnicz/src/: Makefile.am  Sources.make  all2all.cc  all2all.h  all2all_linear.cc  all2all_linear.h  all2all_softmax.cc  all2all_softmax.h  all2all_tanh.cc  all2all_tanh.h  attribute.h  neuron.h  workflow.cc
libZnicz/tests/: Makefile.am  Tests.make  all2all.cc  all2all.h  all2all_common.cc  all2all_common.h  all2all_linear.cc  all2all_linear.h  all2all_softmax.cc  all2all_softmax.h  all2all_tanh.cc  all2all_tanh.h  attribute.cc  common_test.h  functional_mnist.cc  functional_test.cc  functional_test.h  workflow_load_execute_test.cc  workflow_load_execute_test.h
loader/: __init__.py  base.py  caffe_pb2.py  fullbatch.py  image.py  imagenet_loader.py  imagenet_pickle_loader.py  loader_lmdb.py  loader_mnist.py  loader_stl.py  loader_wine.py  pickles.py  saver.py
loader/caffe/: __init__.py  protobuf2.py
ocl/: activation.cl  all2all.cl  bias_update.store_output.cl  channel_splitting.cl  conv.cl  conv_common.cl  cutter.cl  deconv.cl  defines.cl  denormalization.jcl  depooling.cl  dropout.cl  evaluator.cl  evaluator.jcl  evaluator_mse.jcl  forward.cl  gradient_descent.cl  gradient_descent.store_output.cl  gradient_descent_common.cl  gradient_descent_conv.cl  gradient_descent_deconv.cl  gradient_descent_pooling.cl  gradient_descent_relu.cl  gradient_descent_sigmoid.cl  gradient_descent_strict_relu.cl  gradient_descent_tanh.cl  join.cl  kohonen.cl  kohonen.store_output.cl  matrix_multiplication.cl  matrix_reduce.cl  mse_find_closest.cl  mse_find_closest.jcl  multiplier.cl  normalization.cl  pooling.cl  pooling_common.cl  rbm.cl  softmax.cl  summator.cl  (+3 more)
ocl/all2all/: forward.cl  forward.store_output.cl
ocl/conv/: forward.cl  forward.store_output.cl
ocl/deconv/: forward.cl  forward.store_output.cl
optional/: ctask.py  veles_demo2.py
optional/scripts/: main.py  main2.py
samples/: .gitattributes  Wb.py  __init__.py  approximator.py  approximator_config.py  channels.py  channels_config.py  channels_conv.py  channels_conv_config.py  channels_normalize_count.py  channels_relu_conv_config.py  cifar.py  cifar_caffe.py  cifar_caffe_clone.py  cifar_caffe_clone_config.py  cifar_caffe_config.py  cifar_config.py  cifar_conv.py  cifar_conv_config.py  forward_gtzan.py  forward_gtzan_config.py  generate_kanji.py  gtzan.py  gtzan_config.py  gtzan_split.py  gtzan_vis.py  hands.py  hands_config.py  imagenet.py  imagenet_caffe.py  imagenet_caffe_config.py  kanji.py  kanji_config.py  kohonen.py  kohonen_config.py  lines.py  lines_config.py  mnist.py  mnist7.py  mnist784.py  (+19 more)
samples/CIFAR10/: cifar.py  cifar_caffe_config.py  cifar_config.py  (+2 more)
scripts/: fill_device_infos.py  main.py  main2.py
tests/: __init__.py  test_pickle.py  test_utils.py  test_wine.py
wine/: config_data2.py  model_WF_wine.py  t0.py  veles_tasks3.py
(+777 files in other folders)
